--- a/src/main/webapp/WEB-INF/templates/monitor/EZUIKit_Demo_IE8.html
+++ b/src/main/webapp/WEB-INF/templates/monitor/EZUIKit_Demo_IE8.html
@@ -35,10 +35,11 @@
 					<table border="1" width="1000" height="120">
 						<tr height="20" width="300">
 							<fieldset class="menu">
-							<ul>
-							<li><a href="javascript:showPtz();">局域网控制 </a></li>
-							</ul>
+							<!--<ul>-->
+							<!--<li><a href="javascript:showPtz();">局域网控制 </a></li>-->
+							<!--</ul>-->
 							</fieldset>
+							<th style="background-color:#7CCD7C;">智慧灯杆视频监控(请使用IE浏览器观看摄像头预览画面!)</th>
 						<tr>
 							<td>
 								<table border width="1200" height="100">
