--- a/src/main/webapp/WEB-INF/templates/monitor/Monitorlist.html
+++ b/src/main/webapp/WEB-INF/templates/monitor/Monitorlist.html
@@ -8,6 +8,13 @@
 <body>
 <th:block th:include="/common/header::header('monitor')"/>
 <main style="z-index: 0;">
+    <div class="page-title z-depth-1 blue-grey darken-2">
+        <div class="white-text">
+      <span class="flow-text">
+        <a class="btn-flat"><i class="material-icons white-text">list</i></a>摄像头列表
+      </span>
+        </div>
+    </div>
 <div id="main-content" class="container" style="height: 500px">
     <table class="highlight responsive-table" id="monitorData">
         <thead>
