--- a/src/main/webapp/WEB-INF/templates/atmosphere/index.html
+++ b/src/main/webapp/WEB-INF/templates/atmosphere/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <!--/* <editor-fold desc="define"> */-->
+    <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="page" type="com.github.pagehelper.PageInfo<com.xmlan.machine.module.advertisementMachine.entity.AdvertisementMachine>"*/-->
+    <!--/*@thymesVar id="adCount" type="java.util.List<com.xmlan.machine.module.advertisement.entity.AdvertisementCount>"*/-->
+    <!--/*@thymesVar id="name" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="codeNumber" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="addTime" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="deleteToken" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="open" type="java.lang.String"*/-->
+    <!--/* </editor-fold> */-->
     <th:block th:include="/common/head::head('广告机 - 广告机管理后台')"/>
 
     <meta charset="UTF-8">
@@ -42,7 +52,14 @@
 <body>
 <th:block th:include="/common/header::header('atmosphere')"/>
 <main style="z-index: 0;">
-    <div id="main-content" class="container" style="height: 500px">
+    <div class="page-title z-depth-1 blue-grey darken-2">
+        <div class="white-text">
+      <span class="flow-text">
+        <a class="btn-flat"><i class="material-icons white-text">list</i></a>大气数据采集列表
+      </span>
+        </div>
+    </div>
+    <div id="main-content" class="container" style="height: 800px">
         <table class="highlight responsive-table" >
             <thead>
             <tr>
@@ -75,6 +92,31 @@
             </tbody>
             </ul>
     </div>
+    <!--<div id="pagination-div" class="center">-->
+        <!--<ul class="pagination">-->
+            <!--<li  class="disabled">-->
+                <!--<a href="#"><i class="material-icons">chevron_left</i></a>-->
+            <!--</li>-->
+            <!--<li  class="waves-effect">-->
+                <!--<a ><i-->
+                        <!--class="material-icons">chevron_left</i></a>-->
+            <!--</li>-->
+            <!--<th:block >-->
+                <!--<li  class="waves-effect" id="active-page">-->
+                    <!--<a href="#" ></a>-->
+                <!--</li>-->
+                <!--<li  class="waves-effect">-->
+                    <!--<a ></a>-->
+                <!--</li>-->
+            <!--</th:block>-->
+            <!--<li  class="disabled">-->
+                <!--<a href="#"><i class="material-icons">chevron_right</i></a>-->
+            <!--</li>-->
+            <!--<li  class="waves-effect">-->
+                <!--<a ><i class="material-icons">chevron_right</i></a>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</div>-->
 </main>
 <th:block th:include="/common/footer::footer"/>
 <th:block th:include="/common/script::script"/>
