--- a/src/main/webapp/WEB-INF/templates/system/main.html
+++ b/src/main/webapp/WEB-INF/templates/system/main.html
@@ -15,7 +15,7 @@
     <h1 class="flow-text" th:text="|${loginUser.username}您好, 欢迎使用灯杆广告机管理后台|"></h1>
   </div>
   <div class="background container center hide-on-med-and-down">
-    <img src="../../../static/application/image/desk-bg.jpg" width="90%"  style="height: 450px"/>
+    <img src="../../../static/application/image/desk-bg.jpg" width="90%" />
   </div>
   <!--<div class="background container center hide-on-large-only">-->
     <!--<img src="../../../static/application/image/tab-mob-bg.jpg" width="90%"/>-->
