--- a/src/main/webapp/WEB-INF/templates/role/roleList.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleList.html
@@ -54,6 +54,7 @@
     <table class="highlight responsive-table">
       <thead>
       <tr>
+        <!--<th>开发者</th>-->
         <th>角色名</th>
         <th>用户数</th>
         <th>备注</th>
