--- a/src/main/webapp/WEB-INF/templates/common/header.html
+++ b/src/main/webapp/WEB-INF/templates/common/header.html
@@ -23,6 +23,9 @@
               <!--<img src="../../../static/application/image/logo.png" alt="logo" class="center-block" />-->
                 <img th:if="${loginUser.getUsername()=='junpai'}" src="../../../static/application/image/20180525.jpg" alt="logo" class="center-block" style="height: 150px;width: 150px;margin-left: 50px" />
                 <img th:if="${loginUser.getUsername()=='xm'}" src="../../../static/application/image/logo.png" alt="logo" class="center-block" />
+                <ul th:text="${loginUser.getRoleID()}"></ul>
+
+
             </a>
           </li>
           <th:block th:switch="${module}">
@@ -89,14 +92,14 @@
               <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色管理<i class="material-icons">face</i></a>
             </li>
           </th:block>
-          <!--<th:block th:switch="${module}">-->
-            <!--<li class="active" th:if="${loginUser.roleID==adminRoleID}" th:case="'role'">-->
-              <!--<a th:href="@{${adminPath}+'/test/index'}" class="waves-effect waves-teal">测试模块<i class="material-icons">face</i></a>-->
-            <!--</li>-->
-            <!--<li th:if="${loginUser.roleID==adminRoleID}" th:case="*">-->
-              <!--<a th:href="@{${adminPath}+'/test/index'}" class="waves-effect waves-teal">测试模块<i class="material-icons">face</i></a>-->
-            <!--</li>-->
-          <!--</th:block>-->
+          <th:block th:switch="${module}">
+            <li class="active" th:if="${loginUser.roleID==adminRoleID}" th:case="'role'">
+              <a th:href="@{${adminPath}+'/test/index'}" class="waves-effect waves-teal">测试模块<i class="material-icons">face</i></a>
+            </li>
+            <li th:if="${loginUser.roleID==adminRoleID}" th:case="*">
+              <a th:href="@{${adminPath}+'/test/index'}" class="waves-effect waves-teal">测试模块<i class="material-icons">face</i></a>
+            </li>
+          </th:block>
         </ul>
         <ul class="right">
           <li th:text="|${loginUser.username}, 欢迎|" ></li>
@@ -124,6 +127,7 @@
       draggable: true
     });
     $(".dropdown-button").dropdown();
+
   })
 </script>
 </body>
