--- a/src/main/webapp/WEB-INF/templates/common/header.html
+++ b/src/main/webapp/WEB-INF/templates/common/header.html
@@ -23,9 +23,7 @@
               <!--<img src="../../../static/application/image/logo.png" alt="logo" class="center-block" />-->
                 <img th:if="${loginUser.getUsername()=='junpai'}" src="../../../static/application/image/20180525.jpg" alt="logo" class="center-block" style="height: 150px;width: 150px;margin-left: 50px" />
                 <img th:if="${loginUser.getUsername()=='xm'}" src="../../../static/application/image/logo.png" alt="logo" class="center-block" />
-                <ul th:text="${loginUser.getRoleID()}"></ul>
-
-
+              <img th:if="${loginUser.getUsername()=='test'}" src="../../../static/application/image/test.jpg" alt="logo" class="center-block" />
             </a>
           </li>
           <th:block th:switch="${module}">
@@ -101,6 +99,24 @@
             </li>
           </th:block>
         </ul>
+
+        <ul >
+          <li>
+            <a class="dropdown-button" href="#" data-activates="information">
+              <i class="material-icons right">notification_important</i>
+            </a>
+          </li>
+        </ul>
+
+        <ul th:if="${loginUser.id!=10}" id="information" class="dropdown-content">
+          <li>
+            <a th:href="@{${adminPath}+'/test/readInformation'}">已读消息（2）条</a>
+          </li>
+          <li>
+            <a th:href="@{${adminPath}+'/test/unreadInformation'}">未读消息（1）条</a>
+          </li>
+        </ul>
+
         <ul class="right">
           <li th:text="|${loginUser.username}, 欢迎|" ></li>
           <li>
@@ -109,6 +125,7 @@
             </a>
           </li>
         </ul>
+
         <ul id="dropdown-menu" class="dropdown-content">
           <li th:if="${loginUser.roleID==adminRoleID}">
             <a th:href="@{${adminPath}+'/log/1?type=&operate=&operatorObject='}" class="black-text">操作记录</a>
