--- a/src/main/webapp/WEB-INF/templates/system/main.html
+++ b/src/main/webapp/WEB-INF/templates/system/main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:include="/common/head::head('首页 - 广告机管理后台')"></head>
+<head th:include="/common/head::head('首页 - 智慧灯杆管理后台')"></head>
 <!--/* <editor-fold desc="define"> */-->
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
 <!--/*@thymesVar id="adminRoleID" type="java.lang.Integer"*/-->
@@ -12,7 +12,7 @@
 
 <main style="z-index: 0;">
   <div id="main-content" class="container center">
-    <h1 class="flow-text" th:text="|${loginUser.username}您好, 欢迎使用灯杆广告机管理后台|"></h1>
+    <h1 class="flow-text" th:text="|${loginUser.username}您好, 欢迎使用智慧灯杆管理后台|"></h1>
   </div>
   <div class="background container center hide-on-med-and-down">
     <img src="../../../static/application/image/desk-bg.jpg" width="90%" />
