--- a/src/main/webapp/WEB-INF/templates/common/header.html
+++ b/src/main/webapp/WEB-INF/templates/common/header.html
@@ -99,10 +99,10 @@
             </li>
           </th:block>
           <th:block th:switch="${module}">
-            <li class="active" th:if="${loginUser.roleID==adminRoleID}" th:case="'role'">
+            <li class="active" th:if="${loginUser.id==1}" th:case="'role'">
               <a th:href="@{${adminPath}+'/test/index'}" class="waves-effect waves-teal">测试模块<i class="material-icons">face</i></a>
             </li>
-            <li th:if="${loginUser.roleID==adminRoleID}" th:case="*">
+            <li th:if="${loginUser.id==1}" th:case="*">
               <a th:href="@{${adminPath}+'/test/index'}" class="waves-effect waves-teal">测试模块<i class="material-icons">face</i></a>
             </li>
           </th:block>
