上传文件重新编写，文件重命名上传

--- a/src/main/webapp/WEB-INF/templates/xixun/xixunAD.html
+++ b/src/main/webapp/WEB-INF/templates/xixun/xixunAD.html
@@ -54,7 +54,7 @@
                     <p id="detail-user_id">user_id</p>
                     <h6 class="green-text text-darken-2">上传文件并在led屏幕播放</h6>
                     <p>选择文件:</p>
-                    <input type="file" name="files" accept="image/*,video/mp4">
+                    <input type="file" name="file" accept="image/*,video/mp4">
                     <input type="text" style="display: none" name="led" id="led_code" value="">
                     <a class="material-icons"><input type="submit" value="提交">file_upload</a>
                 </form>
