--- a/src/main/webapp/WEB-INF/templates/common/header.html
+++ b/src/main/webapp/WEB-INF/templates/common/header.html
@@ -52,10 +52,10 @@
           </th:block>
           <th:block th:switch="${module}">
             <li class="active" th:case="'advertisement'">
-              <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告管理<i class="material-icons">format_indent_increase</i></a>
+              <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">液晶屏广告管理<i class="material-icons">format_indent_increase</i></a>
             </li>
             <li th:case="*">
-              <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告管理<i class="material-icons">format_indent_increase</i></a>
+              <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">液晶屏广告管理<i class="material-icons">format_indent_increase</i></a>
             </li>
           </th:block>
           <th:block th:switch="${module}">
